<resources>
    <string name="app_name">Wordle</string>
    <string name="my_hint">Enter 4 letter word</string>
    <string name="guess_1">Guess #1</string>
    <string name="guess_1_check">Guess #1 Check</string>
    <string name="guess_2">Guess #2</string>
    <string name="guess_2_check">Guess #2 Check</string>
    <string name="guess_3">Guess #3</string>
    <string name="guess_3_check">Guess #3 check</string>
    <string name="game_won">You won</string>
    <string name="restart_game">RESTART</string>
    <string name="guess_buttton">GUESS</string>
    <string name="try_again">Try again Press RESTART</string>
    <string name="the_word_was">The word was </string>
</resources>